# semear_ptr

./: AMR.rviz  CMakeLists.txt  package.xml
launch/: mapping.launch  move_base.launch  robot.launch  tf_broadcaster_test.launch
maps/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map.pgm  map.yaml  move_base_params.yaml
src/: camera_test.py  cone.cpp  erode_dilate.py  hello.py  hokuyo_obstacle.py  main.py  manometro_server.py  mixture_selection.py  navegacao.cpp  navigation.py  painel.cpp  painel_teste.cpp  path_planning.py  pipeline.py  pre_process_color.py  testando_move_base.py  testing_pipeline.py  valvula.cpp  valvula_teste.cpp
src/Backup/: main_jamal_tentando_com_muito_afinco_formatar_arquivo.py
src/Codigos Visao/: MELHORAR.txt
src/Codigos Visao/Cone (RP)/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code.cpp  code2.cpp  codeCor.cpp  testeCor
src/Codigos Visao/Cone (RP)/BackupCodes/: Histograma.cpp
src/Codigos Visao/Painel (P)/: CMakeCache.txt  CMakeLists.txt  Makefile  Painel  cmake_install.cmake  code.cpp
src/Codigos Visao/Valvula (V)/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  code.cpp  valvula
src/Testes Visao/: MELHORAR.txt
src/Testes Visao/GravarVideo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gravar  tamplete.cpp
src/V-REP/: AMR Scene .ttt  AMR model.ttm  PTR_Scene .ttt
srv/: Cone.srv  FindPath.srv  HokuyoObstacleAvoidance.srv  Manometro.srv  Navigation.srv  Painel.srv  Valvula.srv
(+43 files in other folders)
